compiler/typ/tests/fixtures/diagnostics/0780_polyvar_tuple_payload_mismatch_02.ml.infer.expected
File "0780_polyvar_tuple_payload_mismatch_02.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0780_polyvar_tuple_payload_mismatch_02 is not a valid module name.

File "0780_polyvar_tuple_payload_mismatch_02.ml", line 1, characters 35-39:
1 | let _ : [ `P of int * bool ] = `P (true, 1)
                                       ^^^^
Error: This expression should not be a boolean literal, the expected type is
       int
